compiler/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> top_level_declarations
Rule 2     top_level_declarations -> top_level_declaration top_level_declarations
Rule 3     top_level_declarations -> top_level_declaration
Rule 4     top_level_declaration -> create_variable SEMICOLON
Rule 5     top_level_declaration -> assign SEMICOLON
Rule 6     top_level_declaration -> function
Rule 7     create_variable -> MUTABLE_VARIABLE ID COLON type COLON_EQUALS expression
Rule 8     create_variable -> IMMUTABLE_VARIABLE ID COLON type COLON_EQUALS expression
Rule 9     assign -> ID COLON_EQUALS expression
Rule 10    function -> FUNCTION ID L_PAREN parameter_list R_PAREN COLON type L_BRACKET block R_BRACKET
Rule 11    function -> FUNCTION ID L_PAREN parameter_list R_PAREN COLON type SEMICOLON
Rule 12    parameter_list -> parameter COMMA parameter_list
Rule 13    parameter_list -> parameter
Rule 14    parameter -> MUTABLE_VARIABLE ID COLON type
Rule 15    parameter -> IMMUTABLE_VARIABLE ID COLON type
Rule 16    block -> statement block
Rule 17    block -> statement
Rule 18    statement -> if_statement
Rule 19    statement -> while_statement
Rule 20    statement -> assign SEMICOLON
Rule 21    statement -> create_variable SEMICOLON
Rule 22    statement -> function_call SEMICOLON
Rule 23    if_statement -> IF expression L_BRACKET block R_BRACKET
Rule 24    if_statement -> IF expression L_BRACKET block R_BRACKET else_if_statements
Rule 25    if_statement -> IF expression L_BRACKET block R_BRACKET ELSE L_BRACKET block R_BRACKET
Rule 26    else_if_statements -> ELSE IF expression L_BRACKET block R_BRACKET
Rule 27    else_if_statements -> ELSE IF expression L_BRACKET block R_BRACKET else_if_statements
Rule 28    else_if_statements -> ELSE IF expression L_BRACKET block R_BRACKET ELSE L_BRACKET block R_BRACKET
Rule 29    while_statement -> WHILE expression L_BRACKET block R_BRACKET
Rule 30    expression -> expression MULTIPLY expression
Rule 31    expression -> expression DIVIDE expression
Rule 32    expression -> expression MOD expression
Rule 33    expression -> expression POWER expression
Rule 34    expression -> expression PLUS expression
Rule 35    expression -> expression MINUS expression
Rule 36    expression -> expression LESS expression
Rule 37    expression -> expression GREATER expression
Rule 38    expression -> expression GREATER_EQUAL expression
Rule 39    expression -> expression LESS_EQUAL expression
Rule 40    expression -> expression EQUALS expression
Rule 41    expression -> expression DIFFERENT expression
Rule 42    expression -> expression AND expression
Rule 43    expression -> expression OR expression
Rule 44    expression -> L_PAREN expression R_PAREN
Rule 45    expression -> value
Rule 46    expression -> MINUS expression
Rule 47    expression -> NOT expression
Rule 48    type -> type_int
Rule 49    type -> type_double
Rule 50    type -> type_string
Rule 51    type -> type_boolean
Rule 52    type -> type_char
Rule 53    type -> type_float
Rule 54    type -> type_void
Rule 55    type -> type_array
Rule 56    type_int -> INT
Rule 57    type_double -> DOUBLE
Rule 58    type_string -> STRING
Rule 59    type_boolean -> BOOLEAN
Rule 60    type_char -> CHAR
Rule 61    type_float -> FLOAT
Rule 62    type_void -> VOID
Rule 63    type_array -> L_S_BRACKET type R_S_BRACKET
Rule 64    value -> literal_int
Rule 65    value -> literal_double
Rule 66    value -> literal_string
Rule 67    value -> literal_boolean
Rule 68    value -> literal_char
Rule 69    value -> literal_float
Rule 70    value -> identifier
Rule 71    value -> function_call
Rule 72    value -> index
Rule 73    value -> array
Rule 74    literal_int -> INT_LITERAL
Rule 75    literal_double -> DOUBLE_LITERAL
Rule 76    literal_string -> STRING_LITERAL
Rule 77    literal_boolean -> BOOLEAN_LITERAL
Rule 78    literal_char -> CHAR_LITERAL
Rule 79    literal_float -> FLOAT_LITERAL
Rule 80    identifier -> ID
Rule 81    index -> ID temp
Rule 82    temp -> L_S_BRACKET expression R_S_BRACKET temp
Rule 83    temp -> L_S_BRACKET expression R_S_BRACKET
Rule 84    array -> L_BRACKET array_literal R_BRACKET
Rule 85    array -> L_BRACKET R_BRACKET
Rule 86    array_literal -> expression COMMA array_literal
Rule 87    array_literal -> expression
Rule 88    function_call -> ID L_PAREN arguments_list R_PAREN
Rule 89    arguments_list -> expression COMMA arguments_list
Rule 90    arguments_list -> expression
Rule 91    arguments_list -> <empty>

Terminals, with rules where they appear

AND                  : 42
BOOLEAN              : 59
BOOLEAN_LITERAL      : 77
CHAR                 : 60
CHAR_LITERAL         : 78
COLON                : 7 8 10 11 14 15
COLON_EQUALS         : 7 8 9
COMMA                : 12 86 89
DIFFERENT            : 41
DIVIDE               : 31
DOUBLE               : 57
DOUBLE_LITERAL       : 75
ELSE                 : 25 26 27 28 28
EQUALS               : 40
FLOAT                : 61
FLOAT_LITERAL        : 79
FUNCTION             : 10 11
GREATER              : 37
GREATER_EQUAL        : 38
ID                   : 7 8 9 10 11 14 15 80 81 88
IF                   : 23 24 25 26 27 28
IMMUTABLE_VARIABLE   : 8 15
INT                  : 56
INT_LITERAL          : 74
LESS                 : 36
LESS_EQUAL           : 39
L_BRACKET            : 10 23 24 25 25 26 27 28 28 29 84 85
L_PAREN              : 10 11 44 88
L_S_BRACKET          : 63 82 83
MINUS                : 35 46
MOD                  : 32
MULTIPLY             : 30
MUTABLE_VARIABLE     : 7 14
NOT                  : 47
OR                   : 43
PLUS                 : 34
POWER                : 33
R_BRACKET            : 10 23 24 25 25 26 27 28 28 29 84 85
R_PAREN              : 10 11 44 88
R_S_BRACKET          : 63 82 83
SEMICOLON            : 4 5 11 20 21 22
STRING               : 58
STRING_LITERAL       : 76
VOID                 : 62
WHILE                : 29
error                : 

Nonterminals, with rules where they appear

arguments_list       : 88 89
array                : 73
array_literal        : 84 86
assign               : 5 20
block                : 10 16 23 24 25 25 26 27 28 28 29
create_variable      : 4 21
else_if_statements   : 24 27
expression           : 7 8 9 23 24 25 26 27 28 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 46 47 82 83 86 87 89 90
function             : 6
function_call        : 22 71
identifier           : 70
if_statement         : 18
index                : 72
literal_boolean      : 67
literal_char         : 68
literal_double       : 65
literal_float        : 69
literal_int          : 64
literal_string       : 66
parameter            : 12 13
parameter_list       : 10 11 12
start                : 0
statement            : 16 17
temp                 : 81 82
top_level_declaration : 2 3
top_level_declarations : 1 2
type                 : 7 8 10 11 14 15 63
type_array           : 55
type_boolean         : 51
type_char            : 52
type_double          : 49
type_float           : 53
type_int             : 48
type_string          : 50
type_void            : 54
value                : 45
while_statement      : 19

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . top_level_declarations
    (2) top_level_declarations -> . top_level_declaration top_level_declarations
    (3) top_level_declarations -> . top_level_declaration
    (4) top_level_declaration -> . create_variable SEMICOLON
    (5) top_level_declaration -> . assign SEMICOLON
    (6) top_level_declaration -> . function
    (7) create_variable -> . MUTABLE_VARIABLE ID COLON type COLON_EQUALS expression
    (8) create_variable -> . IMMUTABLE_VARIABLE ID COLON type COLON_EQUALS expression
    (9) assign -> . ID COLON_EQUALS expression
    (10) function -> . FUNCTION ID L_PAREN parameter_list R_PAREN COLON type L_BRACKET block R_BRACKET
    (11) function -> . FUNCTION ID L_PAREN parameter_list R_PAREN COLON type SEMICOLON

    MUTABLE_VARIABLE shift and go to state 7
    IMMUTABLE_VARIABLE shift and go to state 9
    ID              shift and go to state 8
    FUNCTION        shift and go to state 10

    start                          shift and go to state 1
    top_level_declarations         shift and go to state 2
    top_level_declaration          shift and go to state 3
    create_variable                shift and go to state 4
    assign                         shift and go to state 5
    function                       shift and go to state 6

state 1

    (0) S' -> start .



state 2

    (1) start -> top_level_declarations .

    $end            reduce using rule 1 (start -> top_level_declarations .)


state 3

    (2) top_level_declarations -> top_level_declaration . top_level_declarations
    (3) top_level_declarations -> top_level_declaration .
    (2) top_level_declarations -> . top_level_declaration top_level_declarations
    (3) top_level_declarations -> . top_level_declaration
    (4) top_level_declaration -> . create_variable SEMICOLON
    (5) top_level_declaration -> . assign SEMICOLON
    (6) top_level_declaration -> . function
    (7) create_variable -> . MUTABLE_VARIABLE ID COLON type COLON_EQUALS expression
    (8) create_variable -> . IMMUTABLE_VARIABLE ID COLON type COLON_EQUALS expression
    (9) assign -> . ID COLON_EQUALS expression
    (10) function -> . FUNCTION ID L_PAREN parameter_list R_PAREN COLON type L_BRACKET block R_BRACKET
    (11) function -> . FUNCTION ID L_PAREN parameter_list R_PAREN COLON type SEMICOLON

    $end            reduce using rule 3 (top_level_declarations -> top_level_declaration .)
    MUTABLE_VARIABLE shift and go to state 7
    IMMUTABLE_VARIABLE shift and go to state 9
    ID              shift and go to state 8
    FUNCTION        shift and go to state 10

    top_level_declaration          shift and go to state 3
    top_level_declarations         shift and go to state 11
    create_variable                shift and go to state 4
    assign                         shift and go to state 5
    function                       shift and go to state 6

state 4

    (4) top_level_declaration -> create_variable . SEMICOLON

    SEMICOLON       shift and go to state 12


state 5

    (5) top_level_declaration -> assign . SEMICOLON

    SEMICOLON       shift and go to state 13


state 6

    (6) top_level_declaration -> function .

    MUTABLE_VARIABLE reduce using rule 6 (top_level_declaration -> function .)
    IMMUTABLE_VARIABLE reduce using rule 6 (top_level_declaration -> function .)
    ID              reduce using rule 6 (top_level_declaration -> function .)
    FUNCTION        reduce using rule 6 (top_level_declaration -> function .)
    $end            reduce using rule 6 (top_level_declaration -> function .)


state 7

    (7) create_variable -> MUTABLE_VARIABLE . ID COLON type COLON_EQUALS expression

    ID              shift and go to state 14


state 8

    (9) assign -> ID . COLON_EQUALS expression

    COLON_EQUALS    shift and go to state 15


state 9

    (8) create_variable -> IMMUTABLE_VARIABLE . ID COLON type COLON_EQUALS expression

    ID              shift and go to state 16


state 10

    (10) function -> FUNCTION . ID L_PAREN parameter_list R_PAREN COLON type L_BRACKET block R_BRACKET
    (11) function -> FUNCTION . ID L_PAREN parameter_list R_PAREN COLON type SEMICOLON

    ID              shift and go to state 17


state 11

    (2) top_level_declarations -> top_level_declaration top_level_declarations .

    $end            reduce using rule 2 (top_level_declarations -> top_level_declaration top_level_declarations .)


state 12

    (4) top_level_declaration -> create_variable SEMICOLON .

    MUTABLE_VARIABLE reduce using rule 4 (top_level_declaration -> create_variable SEMICOLON .)
    IMMUTABLE_VARIABLE reduce using rule 4 (top_level_declaration -> create_variable SEMICOLON .)
    ID              reduce using rule 4 (top_level_declaration -> create_variable SEMICOLON .)
    FUNCTION        reduce using rule 4 (top_level_declaration -> create_variable SEMICOLON .)
    $end            reduce using rule 4 (top_level_declaration -> create_variable SEMICOLON .)


state 13

    (5) top_level_declaration -> assign SEMICOLON .

    MUTABLE_VARIABLE reduce using rule 5 (top_level_declaration -> assign SEMICOLON .)
    IMMUTABLE_VARIABLE reduce using rule 5 (top_level_declaration -> assign SEMICOLON .)
    ID              reduce using rule 5 (top_level_declaration -> assign SEMICOLON .)
    FUNCTION        reduce using rule 5 (top_level_declaration -> assign SEMICOLON .)
    $end            reduce using rule 5 (top_level_declaration -> assign SEMICOLON .)


state 14

    (7) create_variable -> MUTABLE_VARIABLE ID . COLON type COLON_EQUALS expression

    COLON           shift and go to state 18


state 15

    (9) assign -> ID COLON_EQUALS . expression
    (30) expression -> . expression MULTIPLY expression
    (31) expression -> . expression DIVIDE expression
    (32) expression -> . expression MOD expression
    (33) expression -> . expression POWER expression
    (34) expression -> . expression PLUS expression
    (35) expression -> . expression MINUS expression
    (36) expression -> . expression LESS expression
    (37) expression -> . expression GREATER expression
    (38) expression -> . expression GREATER_EQUAL expression
    (39) expression -> . expression LESS_EQUAL expression
    (40) expression -> . expression EQUALS expression
    (41) expression -> . expression DIFFERENT expression
    (42) expression -> . expression AND expression
    (43) expression -> . expression OR expression
    (44) expression -> . L_PAREN expression R_PAREN
    (45) expression -> . value
    (46) expression -> . MINUS expression
    (47) expression -> . NOT expression
    (64) value -> . literal_int
    (65) value -> . literal_double
    (66) value -> . literal_string
    (67) value -> . literal_boolean
    (68) value -> . literal_char
    (69) value -> . literal_float
    (70) value -> . identifier
    (71) value -> . function_call
    (72) value -> . index
    (73) value -> . array
    (74) literal_int -> . INT_LITERAL
    (75) literal_double -> . DOUBLE_LITERAL
    (76) literal_string -> . STRING_LITERAL
    (77) literal_boolean -> . BOOLEAN_LITERAL
    (78) literal_char -> . CHAR_LITERAL
    (79) literal_float -> . FLOAT_LITERAL
    (80) identifier -> . ID
    (88) function_call -> . ID L_PAREN arguments_list R_PAREN
    (81) index -> . ID temp
    (84) array -> . L_BRACKET array_literal R_BRACKET
    (85) array -> . L_BRACKET R_BRACKET

    L_PAREN         shift and go to state 22
    MINUS           shift and go to state 21
    NOT             shift and go to state 24
    INT_LITERAL     shift and go to state 35
    DOUBLE_LITERAL  shift and go to state 36
    STRING_LITERAL  shift and go to state 37
    BOOLEAN_LITERAL shift and go to state 38
    CHAR_LITERAL    shift and go to state 39
    FLOAT_LITERAL   shift and go to state 40
    ID              shift and go to state 19
    L_BRACKET       shift and go to state 41

    expression                     shift and go to state 20
    value                          shift and go to state 23
    literal_int                    shift and go to state 25
    literal_double                 shift and go to state 26
    literal_string                 shift and go to state 27
    literal_boolean                shift and go to state 28
    literal_char                   shift and go to state 29
    literal_float                  shift and go to state 30
    identifier                     shift and go to state 31
    function_call                  shift and go to state 32
    index                          shift and go to state 33
    array                          shift and go to state 34

state 16

    (8) create_variable -> IMMUTABLE_VARIABLE ID . COLON type COLON_EQUALS expression

    COLON           shift and go to state 42


state 17

    (10) function -> FUNCTION ID . L_PAREN parameter_list R_PAREN COLON type L_BRACKET block R_BRACKET
    (11) function -> FUNCTION ID . L_PAREN parameter_list R_PAREN COLON type SEMICOLON

    L_PAREN         shift and go to state 43


state 18

    (7) create_variable -> MUTABLE_VARIABLE ID COLON . type COLON_EQUALS expression
    (48) type -> . type_int
    (49) type -> . type_double
    (50) type -> . type_string
    (51) type -> . type_boolean
    (52) type -> . type_char
    (53) type -> . type_float
    (54) type -> . type_void
    (55) type -> . type_array
    (56) type_int -> . INT
    (57) type_double -> . DOUBLE
    (58) type_string -> . STRING
    (59) type_boolean -> . BOOLEAN
    (60) type_char -> . CHAR
    (61) type_float -> . FLOAT
    (62) type_void -> . VOID
    (63) type_array -> . L_S_BRACKET type R_S_BRACKET

    INT             shift and go to state 53
    DOUBLE          shift and go to state 54
    STRING          shift and go to state 55
    BOOLEAN         shift and go to state 56
    CHAR            shift and go to state 57
    FLOAT           shift and go to state 58
    VOID            shift and go to state 59
    L_S_BRACKET     shift and go to state 60

    type                           shift and go to state 44
    type_int                       shift and go to state 45
    type_double                    shift and go to state 46
    type_string                    shift and go to state 47
    type_boolean                   shift and go to state 48
    type_char                      shift and go to state 49
    type_float                     shift and go to state 50
    type_void                      shift and go to state 51
    type_array                     shift and go to state 52

state 19

    (80) identifier -> ID .
    (88) function_call -> ID . L_PAREN arguments_list R_PAREN
    (81) index -> ID . temp
    (82) temp -> . L_S_BRACKET expression R_S_BRACKET temp
    (83) temp -> . L_S_BRACKET expression R_S_BRACKET

    MULTIPLY        reduce using rule 80 (identifier -> ID .)
    DIVIDE          reduce using rule 80 (identifier -> ID .)
    MOD             reduce using rule 80 (identifier -> ID .)
    POWER           reduce using rule 80 (identifier -> ID .)
    PLUS            reduce using rule 80 (identifier -> ID .)
    MINUS           reduce using rule 80 (identifier -> ID .)
    LESS            reduce using rule 80 (identifier -> ID .)
    GREATER         reduce using rule 80 (identifier -> ID .)
    GREATER_EQUAL   reduce using rule 80 (identifier -> ID .)
    LESS_EQUAL      reduce using rule 80 (identifier -> ID .)
    EQUALS          reduce using rule 80 (identifier -> ID .)
    DIFFERENT       reduce using rule 80 (identifier -> ID .)
    AND             reduce using rule 80 (identifier -> ID .)
    OR              reduce using rule 80 (identifier -> ID .)
    SEMICOLON       reduce using rule 80 (identifier -> ID .)
    R_PAREN         reduce using rule 80 (identifier -> ID .)
    COMMA           reduce using rule 80 (identifier -> ID .)
    R_BRACKET       reduce using rule 80 (identifier -> ID .)
    R_S_BRACKET     reduce using rule 80 (identifier -> ID .)
    L_BRACKET       reduce using rule 80 (identifier -> ID .)
    L_PAREN         shift and go to state 61
    L_S_BRACKET     shift and go to state 63

    temp                           shift and go to state 62

state 20

    (9) assign -> ID COLON_EQUALS expression .
    (30) expression -> expression . MULTIPLY expression
    (31) expression -> expression . DIVIDE expression
    (32) expression -> expression . MOD expression
    (33) expression -> expression . POWER expression
    (34) expression -> expression . PLUS expression
    (35) expression -> expression . MINUS expression
    (36) expression -> expression . LESS expression
    (37) expression -> expression . GREATER expression
    (38) expression -> expression . GREATER_EQUAL expression
    (39) expression -> expression . LESS_EQUAL expression
    (40) expression -> expression . EQUALS expression
    (41) expression -> expression . DIFFERENT expression
    (42) expression -> expression . AND expression
    (43) expression -> expression . OR expression

    SEMICOLON       reduce using rule 9 (assign -> ID COLON_EQUALS expression .)
    MULTIPLY        shift and go to state 64
    DIVIDE          shift and go to state 65
    MOD             shift and go to state 66
    POWER           shift and go to state 67
    PLUS            shift and go to state 68
    MINUS           shift and go to state 69
    LESS            shift and go to state 70
    GREATER         shift and go to state 71
    GREATER_EQUAL   shift and go to state 72
    LESS_EQUAL      shift and go to state 73
    EQUALS          shift and go to state 74
    DIFFERENT       shift and go to state 75
    AND             shift and go to state 76
    OR              shift and go to state 77


state 21

    (46) expression -> MINUS . expression
    (30) expression -> . expression MULTIPLY expression
    (31) expression -> . expression DIVIDE expression
    (32) expression -> . expression MOD expression
    (33) expression -> . expression POWER expression
    (34) expression -> . expression PLUS expression
    (35) expression -> . expression MINUS expression
    (36) expression -> . expression LESS expression
    (37) expression -> . expression GREATER expression
    (38) expression -> . expression GREATER_EQUAL expression
    (39) expression -> . expression LESS_EQUAL expression
    (40) expression -> . expression EQUALS expression
    (41) expression -> . expression DIFFERENT expression
    (42) expression -> . expression AND expression
    (43) expression -> . expression OR expression
    (44) expression -> . L_PAREN expression R_PAREN
    (45) expression -> . value
    (46) expression -> . MINUS expression
    (47) expression -> . NOT expression
    (64) value -> . literal_int
    (65) value -> . literal_double
    (66) value -> . literal_string
    (67) value -> . literal_boolean
    (68) value -> . literal_char
    (69) value -> . literal_float
    (70) value -> . identifier
    (71) value -> . function_call
    (72) value -> . index
    (73) value -> . array
    (74) literal_int -> . INT_LITERAL
    (75) literal_double -> . DOUBLE_LITERAL
    (76) literal_string -> . STRING_LITERAL
    (77) literal_boolean -> . BOOLEAN_LITERAL
    (78) literal_char -> . CHAR_LITERAL
    (79) literal_float -> . FLOAT_LITERAL
    (80) identifier -> . ID
    (88) function_call -> . ID L_PAREN arguments_list R_PAREN
    (81) index -> . ID temp
    (84) array -> . L_BRACKET array_literal R_BRACKET
    (85) array -> . L_BRACKET R_BRACKET

    L_PAREN         shift and go to state 22
    MINUS           shift and go to state 21
    NOT             shift and go to state 24
    INT_LITERAL     shift and go to state 35
    DOUBLE_LITERAL  shift and go to state 36
    STRING_LITERAL  shift and go to state 37
    BOOLEAN_LITERAL shift and go to state 38
    CHAR_LITERAL    shift and go to state 39
    FLOAT_LITERAL   shift and go to state 40
    ID              shift and go to state 19
    L_BRACKET       shift and go to state 41

    expression                     shift and go to state 78
    value                          shift and go to state 23
    literal_int                    shift and go to state 25
    literal_double                 shift and go to state 26
    literal_string                 shift and go to state 27
    literal_boolean                shift and go to state 28
    literal_char                   shift and go to state 29
    literal_float                  shift and go to state 30
    identifier                     shift and go to state 31
    function_call                  shift and go to state 32
    index                          shift and go to state 33
    array                          shift and go to state 34

state 22

    (44) expression -> L_PAREN . expression R_PAREN
    (30) expression -> . expression MULTIPLY expression
    (31) expression -> . expression DIVIDE expression
    (32) expression -> . expression MOD expression
    (33) expression -> . expression POWER expression
    (34) expression -> . expression PLUS expression
    (35) expression -> . expression MINUS expression
    (36) expression -> . expression LESS expression
    (37) expression -> . expression GREATER expression
    (38) expression -> . expression GREATER_EQUAL expression
    (39) expression -> . expression LESS_EQUAL expression
    (40) expression -> . expression EQUALS expression
    (41) expression -> . expression DIFFERENT expression
    (42) expression -> . expression AND expression
    (43) expression -> . expression OR expression
    (44) expression -> . L_PAREN expression R_PAREN
    (45) expression -> . value
    (46) expression -> . MINUS expression
    (47) expression -> . NOT expression
    (64) value -> . literal_int
    (65) value -> . literal_double
    (66) value -> . literal_string
    (67) value -> . literal_boolean
    (68) value -> . literal_char
    (69) value -> . literal_float
    (70) value -> . identifier
    (71) value -> . function_call
    (72) value -> . index
    (73) value -> . array
    (74) literal_int -> . INT_LITERAL
    (75) literal_double -> . DOUBLE_LITERAL
    (76) literal_string -> . STRING_LITERAL
    (77) literal_boolean -> . BOOLEAN_LITERAL
    (78) literal_char -> . CHAR_LITERAL
    (79) literal_float -> . FLOAT_LITERAL
    (80) identifier -> . ID
    (88) function_call -> . ID L_PAREN arguments_list R_PAREN
    (81) index -> . ID temp
    (84) array -> . L_BRACKET array_literal R_BRACKET
    (85) array -> . L_BRACKET R_BRACKET

    L_PAREN         shift and go to state 22
    MINUS           shift and go to state 21
    NOT             shift and go to state 24
    INT_LITERAL     shift and go to state 35
    DOUBLE_LITERAL  shift and go to state 36
    STRING_LITERAL  shift and go to state 37
    BOOLEAN_LITERAL shift and go to state 38
    CHAR_LITERAL    shift and go to state 39
    FLOAT_LITERAL   shift and go to state 40
    ID              shift and go to state 19
    L_BRACKET       shift and go to state 41

    expression                     shift and go to state 79
    value                          shift and go to state 23
    literal_int                    shift and go to state 25
    literal_double                 shift and go to state 26
    literal_string                 shift and go to state 27
    literal_boolean                shift and go to state 28
    literal_char                   shift and go to state 29
    literal_float                  shift and go to state 30
    identifier                     shift and go to state 31
    function_call                  shift and go to state 32
    index                          shift and go to state 33
    array                          shift and go to state 34

state 23

    (45) expression -> value .
